--- a/public/scss/layout/_panel.scss
+++ b/public/scss/layout/_panel.scss
@@ -18,4 +18,14 @@
       @extend %panel-padding;
     }
   }
+
+  @include m(main) {
+    @extend %panel-main;
+
+    @include m(centered) {
+      @extend %center-align;
+      @extend %panel-main;
+    }
+  }
+
 }
