--- a/public/scss/modules/_headlines.scss
+++ b/public/scss/modules/_headlines.scss
@@ -37,6 +37,9 @@
 
   &-menu {
     font-family: $font-family--default;
+    // text-transform: uppercase;
+    // letter-spacing: $letter-space;
+    // font-weight: $font-weight--heavy;
   }
 
 }
