--- a/public/scss/modules/_icons.scss
+++ b/public/scss/modules/_icons.scss
@@ -15,8 +15,8 @@
     @extend %icn--ui;
     width: 25px;
     height: 17px;
-    border-top: solid 3px palette(grey);
-    border-bottom: solid 3px palette(grey);
+    border-top: solid 3px palette(grey, light);
+    border-bottom: solid 3px palette(grey, light);
     position: relative;
     @include p-el(before, 25px, 3px) {
       background: palette(grey, light);
