--- a/public/scss/layout/_grid-container.scss
+++ b/public/scss/layout/_grid-container.scss
@@ -13,7 +13,8 @@
   }
 
   /*===== Set a max-width for grid container =====*/
-  @include mq(large) {
+  @include mq(split-lg) {
     max-width: $g-cont-max-w;
   }
+
 }
