--- a/public/scss/modules/_headlines.scss
+++ b/public/scss/modules/_headlines.scss
@@ -3,43 +3,53 @@
 /**** HEADLINES
 *=======================================================================*/
 .headline {
+
   &-primary {
     @extend %hdln-prim;
+    @extend %wdth-rzr;
     margin-bottom: rem(70px, 42px);
 
     @include m(grouped) {
       @extend %hdln-prim;
+      @extend %wdth-rzr;
       margin-bottom: 0;
     }
+
   }
 
   &-secondary {
     @extend %hdln-sec;
+    @extend %wdth-rzr;
     margin-bottom: rem(22px, 24px);
 
     @include m(grouped) {
       @extend %hdln-sec;
+      @extend %wdth-rzr;
       margin-top: rem(10px, 24px);
       margin-bottom: rem(54px, 24px);
     }
+
   }
 
   &-tertiary {
     @extend %hdln-ter;
+    @extend %wdth-rzr;
     margin-bottom: rem(22px, 24px);
 
     @include m(grouped) {
       @extend %hdln-ter;
+      @extend %wdth-rzr;
       margin-top: rem(10px, 24px);
       margin-bottom: rem(54px, 24px);
     }
+
   }
 
-  &-menu {
-    font-family: $font-family--default;
-    // text-transform: uppercase;
-    // letter-spacing: $letter-space;
-    // font-weight: $font-weight--heavy;
+  &-plaque {
+    @extend %hdln-pla;
+    @extend %wdth-rzr;
+    // margin-bottom: rem(22px, 24px);
+    margin-bottom: 0;
   }
 
 }
