--- a/public/scss/modules/_paragraphs.scss
+++ b/public/scss/modules/_paragraphs.scss
@@ -3,14 +3,17 @@
 /**** HEADLINES
 *=======================================================================*/
 .para {
-  &-primary {
-    @extend %prgrph-prim;
-    font-family: $font-family--default;
-    margin: 0 0 rem(30px, 18px);
 
+  &-primary {
+
+    @extend %prgrph-prim;
+    @extend %wdth-rzr;
+    margin: 0 0 rem(30px, 18px);
     @include m(grouped) {
       @extend %prgrph-prim;
+      @extend %wdth-rzr;
     }
+
   }
 
 }
