--- a/public/scss/layout/_extends.scss
+++ b/public/scss/layout/_extends.scss
@@ -4,24 +4,30 @@
 *=======================================================================*/
 %panel-default {
   padding-top: rem(30px);
-  @include mq(medium) {
+
+  @include mq(split-md) {
     padding-bottom: rem(20px);
   }
+
 }
 
 %panel-padding {
   padding-top: rem(34px);
-  @include mq(medium) {
+
+  @include mq(split-md) {
     padding-top: rem(80px);
     padding-bottom: rem(34px);
   }
+
 }
 
 %panel-main {
   padding-top: rem(40px);
-  @include mq(medium) {
+
+  @include mq(split-md) {
     padding-top: rem(80px);
     padding-bottom: rem(300px);
     // margin-bottom: rem(34px);
   }
+
 }
