--- a/public/scss/layout/_grid-columns.scss
+++ b/public/scss/layout/_grid-columns.scss
@@ -4,27 +4,32 @@
 *=======================================================================*/
 /*===== Calculate grid columns =====*/
 .grid__col {
-  @include mq(medium) {
+
+  @include mq(split-md) {
     @include g-columns;
   }
+
 }
 
 /*===== Column styles =====*/
 [class^="grid__col--"] {
-  @include mq(small)  {
+
+  @include mq(split-sm)  {
     margin-top: rem(12px);
     margin-bottom: rem(12px);
   }
 
-  @include mq(medium) {
+  @include mq(split-md) {
     @include doubly(percentage($g-gutter-width / $context));
     float: left;
     min-height: 1px;
     padding-right: 10px;
     padding-left: 10px;
+
     &:last-of-type {
       float: right;
     }
+
   }
 
 }
