--- a/public/scss/modules/_navbar.scss
+++ b/public/scss/modules/_navbar.scss
@@ -4,8 +4,10 @@
 *=======================================================================*/
 .navbar {
   position: relative;
-  @include mq(medium) {
+
+  @include mq(split-md) {
     margin-top: rem(54px);
     margin-bottom: 0;
   }
+
 }
