--- a/public/scss/states/_collapsed.scss
+++ b/public/scss/states/_collapsed.scss
@@ -4,7 +4,7 @@
 *=======================================================================*/
 /*===== Import collapsed states =====*/
 .is-collapsed-mobile {
-  @include mq(small) {
+  @include mq(split-sm) {
     visibility: collapse;
     padding: 0;
     height: 0;
