--- a/public/scss/utilities/_functions.scss
+++ b/public/scss/utilities/_functions.scss
@@ -3,12 +3,8 @@
 /**** FUNCTIONS
 *=======================================================================*/
 /*===== Import if Google Fonts URL is defined =====*/
-@if variable-exists(font-url--prata) {
-  @import url($font-url--prata);
-}
-
-@if variable-exists(font-url--open-sans) {
-  @import url($font-url--open-sans);
+@if variable-exists(font-url--googlr) {
+  @import url($font-url--googlr);
 }
 
 /*===== Converts pixels to rem values =====*/
